appId: dev.miyado.shogisupplement
---
- launchApp:
    clearState: false
- assertVisible: "将棋サプリ"
- assertVisible: "棋譜を追加する"
- tapOn: "棋譜を追加する"
